--- a/251_300.md
+++ b/251_300.md
@@ -23,7 +23,7 @@ B. Create a NAT gateway, and place it in a public subnet. Configure the private 
 - [ ] The private subnet's route table directs outbound traffic to the NAT gateway.
 - [ ] This solution enables the EC2 instance to download updates securely.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. An internet gateway allows public subnets to access the internet, but not private subnets.
 - [ ] C. A NAT instance requires more management than a NAT gateway. Placing it in the same subnet is incorrect.
@@ -57,7 +57,7 @@ A. Amazon Elastic File System (Amazon EFS)
 - [ ] It supports concurrent access from multiple EC2 instances.
 - [ ] EFS is designed with built-in redundancy and scalability.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Amazon EBS is block storage and can only be attached to a single EC2 instance at a time.
 - [ ] C. Amazon S3 Glacier Deep Archive is for long-term archival, not concurrent access.
@@ -96,7 +96,7 @@ C. Deleting Amazon EC2 instances
 - [ ] Policy 2 denies "ds:Delete\*" actions.
 - [ ] Deny statements override allow statements, but the cloud engineer is still allowed to delete EC2 instances.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. The engineer can't delete IAM users because it's not in Policy 1.
 - [ ] B. "ds:Delete\*" denies deleting directories.
@@ -130,7 +130,7 @@ B. Create security group rules using the security group ID as the source or dest
 - [ ] Security groups can reference other security groups, applying least privilege.
 - [ ] This allows traffic only from instances in the specified security group.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Instance IDs are dynamic and not practical for security group rules.
 - [ ] C. VPC CIDR blocks are too broad and violate least privilege.
@@ -163,7 +163,7 @@ D. Store the order in the database. Send a message that includes the order numbe
 - [ ] SQS FIFO queues ensure messages are processed exactly once and in order.
 - [ ] This prevents duplicate order creation by processing each order only once.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Kinesis Data Firehose is for streaming data to destinations, not for ensuring single processing.
 - [ ] B. CloudTrail is for API call logging, not for workflow management.
@@ -201,7 +201,7 @@ D. Enable MFA Delete on the bucket.
 
 - [ ] MFA Delete requires multi-factor authentication for deletion, preventing accidental deletes.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Read-only ACL prevents users from modifying and uploading documents.
 - [ ] C. IAM policies control access but do not prevent accidental deletion.
@@ -235,7 +235,7 @@ A. Use an Amazon CloudWatch metric stream to send the EC2 Auto Scaling status da
 - [ ] Kinesis Data Firehose efficiently delivers data to S3.
 - [ ] This is a serverless solution.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Launching an EMR cluster is not serverless and adds overhead.
 - [ ] C. Lambda on a schedule is not real-time.
@@ -269,7 +269,7 @@ D. Create an AWS Glue extract, transform, and load (ETL) job to convert the .csv
 - [ ] Lambda functions can trigger the ETL job on S3 PUT events.
 - [ ] This solution is efficient and managed.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Lambda functions may have limitations with large files and complex transformations.
 - [ ] B. Spark jobs require more setup and management.
@@ -303,7 +303,7 @@ A. Create a backup vault in AWS Backup to retain RDS backups. Create a new backu
 - [ ] Backup plans automate backup schedules and retention.
 - [ ] This solution meets the requirements for consistent and restorable backups.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. RDS snapshots are point-in-time and not as flexible as AWS Backup. DLM is for EBS volumes, not RDS.
 - [ ] C. CloudWatch Logs are for log data, not database backups.
@@ -336,7 +336,7 @@ D. Join the file system to the Active Directory to restrict access.
 - [ ] Joining the file system to the Active Directory preserves existing permissions.
 - [ ] This allows on-premises Active Directory groups to control access.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. AD Connector connects to AD but doesn't directly enforce permissions. Mapping to IAM groups is incorrect.
 - [ ] B. Tags are for metadata, not access control. Mapping to IAM groups is incorrect.
@@ -375,7 +375,7 @@ C. Configure a Lambda@Edge function to send specific objects to users based on t
 
 - [ ] Lambda@Edge allows customization of content delivery based on headers like User-Agent.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Network Load Balancers do not support host headers.
 - [ ] D. Global Accelerator is for performance, not content versioning. NLBs don't support host-based routing.
@@ -411,7 +411,7 @@ A. Create a peering connection between the VPCs. Add a route table entry for the
 - [ ] Route table entries enable traffic flow.
 - [ ] Security groups control access to ElastiCache.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Transit VPC is more complex and expensive for only two VPCs.
 - [ ] C. Security groups of ElastiCache, not peering, control access to ElastiCache.
@@ -450,7 +450,7 @@ D. Deploy an Amazon Elastic Container Service (Amazon ECS) service with a Fargat
 - [ ] Fargate removes the need to manage underlying infrastructure.
 - [ ] Specifying at least two tasks ensures high availability.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Managing the Kubernetes control plane adds operational overhead.
 - [ ] C. EC2 launch type requires managing EC2 instances.
@@ -483,7 +483,7 @@ D. Create an Application Load Balancer (ALB) with a health check in front of the
 - [ ] ALB health checks ensure traffic is routed only to healthy instances.
 - [ ] Route 53 directs traffic to the ALB.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Simple routing does not provide health checks.
 - [ ] B. Failover routing is for disaster recovery, not load balancing.
@@ -517,7 +517,7 @@ C. Configure a public Application Load Balancer (ALB) with multiple redundant Am
 - [ ] ALB distributes traffic to EC2 instances.
 - [ ] Private subnets secure EC2 instances.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. EC2 instances in public subnets are less secure.
 - [ ] B. CloudFront needs a public endpoint like an ALB, not EC2 instances directly. EC2 instances in private subnets can't be directly accessed from the internet.
@@ -550,7 +550,7 @@ A. Configure an accelerator in AWS Global Accelerator. Add a listener for the po
 - [ ] Global Accelerator improves performance by routing traffic to the nearest healthy endpoint.
 - [ ] It monitors application health and redirects traffic away from unhealthy endpoints.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. CloudFront is for caching content, not for real-time traffic routing based on health.
 - [ ] C. CloudFront with S3 is for static content, not dynamic application traffic.
@@ -584,7 +584,7 @@ D. Create an Amazon Kinesis Data Firehose delivery stream to store the data in A
 - [ ] Kinesis Data Analytics can analyze data in near-real time.
 - [ ] This is a managed solution with minimal overhead.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Kinesis Data Streams and Lambda add complexity.
 - [ ] B. EMR clusters add operational overhead.
@@ -617,7 +617,7 @@ A. Use Amazon ElastiCache in front of the database.
 - [ ] ElastiCache can cache frequently read data, reducing database load.
 - [ ] This improves read performance with minimal changes to the application.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. RDS Proxy is for connection management, not caching.
 - [ ] C. Migrating to Lambda requires significant application changes.
@@ -650,7 +650,7 @@ C. Create a read replica of the primary database and have the business analysts 
 - [ ] Read replicas offload read queries from the primary database.
 - [ ] This improves performance with minimal application changes.
    
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. DynamoDB is not suitable for complex SQL queries.
 - [ ] B. ElastiCache is for caching, not for running analytical queries.
@@ -686,7 +686,7 @@ A. Use client-side encryption to encrypt the data that is being uploaded to the 
 - [ ] Client-side encryption ensures that data is encrypted before it is sent to S3, thus meeting both at-rest and in-transit encryption requirements.
 - [ ] The data is encrypted on the client before it leaves the client's environment, providing end-to-end encryption control.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] B. Server-side encryption only encrypts the data at rest in the S3 bucket, not during transit from the client to S3.
 - [ ] C. Bucket policies enforcing server-side encryption also only address encryption at rest, not in transit.
@@ -721,7 +721,7 @@ C. Configure scheduled scaling to scale up to the desired compute level.
 - [ ] Scheduled scaling is the most appropriate solution because the peak capacity is consistent and the start time is known.
 - [ ] It allows the Auto Scaling group to reach the desired capacity precisely at the required time (1 AM) and can be configured to scale down afterward, optimizing costs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Increasing the minimum capacity keeps those instances running continuously, which is not cost-effective since the extra capacity is only needed for a short period each night.
 - [ ] B. Increasing the maximum capacity only allows Auto Scaling to scale up to that limit if triggered by a metric, but it doesn't ensure the scaling occurs at the specific time needed.
@@ -757,7 +757,7 @@ B. Configure an Amazon CloudFront distribution with the ALB as the origin. Set t
 - [ ] Configuring CloudFront to cache based on the Accept-Language header allows it to serve different language versions of the site.
 - [ ] This approach avoids the complexity and cost of replicating the entire architecture in multiple Regions.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ] A. Serving a dynamic website entirely from S3 is generally not feasible, and this option doesn't leverage the existing ALB and EC2 infrastructure.
 - [ ] C. API Gateway is not designed for caching full web pages. While it can cache API responses, it's not the right tool for this scenario.
@@ -792,7 +792,7 @@ B. Use an Amazon Aurora global database with a warm standby deployment.
 - [ ]   An Aurora global database provides the lowest RTO because it maintains a fully operational standby database in the DR Region.
 - [ ]   A warm standby setup minimizes data loss and recovery time, as the database is already running and synchronized.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. A pilot light deployment requires starting up infrastructure in the DR Region, increasing the RTO.
 - [ ]   C and D. RDS Multi-AZ primarily focuses on high availability within a single Region. While it improves resilience, it doesn't offer the same low RTO as an Aurora global database for cross-region DR.
@@ -827,7 +827,7 @@ B. Create Amazon Machine Images (AMIs) to back up the EC2 instances. Copy the AM
 - [ ]   CloudFormation enables the automation of infrastructure deployment, which is more operationally efficient than using Lambda and custom scripts.
 - [ ]   Using AMIs allows for quick recovery of EC2 instances in the DR Region, helping to meet the RTO.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. While using Lambda and custom scripts can automate deployment, it is less efficient and harder to maintain than using CloudFormation.
 - [ ]   C. Launching and maintaining active EC2 instances in a secondary Region consumes more resources and increases costs during normal operations.
@@ -863,7 +863,7 @@ C. Implement a target tracking action triggered at a lower CPU threshold, and de
 - [ ]   Setting a lower CPU threshold ensures that the Auto Scaling group starts adding instances earlier, addressing the slow performance at the beginning of the day.
 - [ ]   Decreasing the cooldown period allows the Auto Scaling group to respond more quickly to changes in demand.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Scheduled actions are based on time, not actual load. They might not be responsive enough to handle variations in user activity. Setting the desired capacity alone does not guarantee a smooth scaling process.
 - [ ]   B. Step scaling adjusts capacity in fixed increments, which can lead to over- [ ] or under-provisioning. It is less flexible than target tracking.
@@ -903,7 +903,7 @@ D. Configure the Auto Scaling group to use the average CPU as the scaling metric
 
 - [ ]   Using CPU utilization as a scaling metric ensures that the Auto Scaling group adds or removes EC2 instances based on the application's processing load, maintaining performance.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   B. Migrating to Aurora is a significant change and is not necessary to address scaling. It is also more complex than simply enabling storage Auto Scaling.
 - [ ]   C. Configuring an alarm only notifies about low storage but does not automatically scale it.
@@ -938,7 +938,7 @@ D. Use Amazon S3 for storing the video content. Move the files temporarily over 
 - [ ]   Amazon S3 is significantly cheaper for storing large amounts of video data compared to Amazon EFS.
 - [ ]   Using EBS for temporary processing allows for the necessary performance while keeping long-term storage costs low.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A and B. AWS Storage Gateway is used to integrate on-premises storage with AWS and is not cost-effective for this cloud-native use case.
 - [ ]   C. While transferring files from EFS to EBS can reduce costs compared to using EFS exclusively, it does not provide the same cost savings as using S3 for storage.
@@ -980,7 +980,7 @@ E. Configure Amazon Macie for the AWS account. Integrate Macie with Amazon Event
 - [ ]   Amazon Macie can identify sensitive data, such as financial information.
 - [ ]   Integrating Macie with EventBridge and SNS enables automated notifications when sensitive data is detected.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Amazon Redshift is a data warehouse service, not optimized for low-latency, high-traffic queries. It's better suited for analytics.
 - [ ]   C. While Macie can integrate with Lambda, sending events to Lambda for monthly analysis is less direct than using SNS for notifications. Lambda is better for processing, not just forwarding notifications.
@@ -1016,7 +1016,7 @@ A. Create an AWS Backup plan to back up the DynamoDB table on the first day of e
 - [ ]   It allows setting backup schedules and retention policies, including transitioning backups to cold storage.
 - [ ]   This solution meets all the requirements within a single service, simplifying management.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   B. DynamoDB backups cannot be directly transitioned to S3 Glacier. This option involves managing backups and lifecycle policies across multiple services, which is more complex.
 - [ ]   C. Using custom scripts and EventBridge rules adds complexity and maintenance overhead compared to using AWS Backup. It also requires managing separate scripts for backup and lifecycle management.
@@ -1051,7 +1051,7 @@ B. Use standard SQL queries in Amazon Athena to analyze the CloudFront logs in t
 - [ ]   Amazon Athena allows querying data directly in S3 using SQL, which is ideal for analyzing CloudFront logs.
 - [ ]   Amazon QuickSight is a business intelligence service that can create visualizations and dashboards from the query results.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. AWS Glue is primarily an ETL (Extract, Transform, Load) service, not a visualization tool. While it can process data, it's not the best choice for creating dashboards.
 - [ ]   C and D. Amazon DynamoDB is a NoSQL database and not suitable for running SQL queries on CloudFront logs stored in S3. It is designed for different use cases.
@@ -1085,7 +1085,7 @@ A. Enable a Multi-AZ deployment for the DB instance.
 - [ ]   Multi-AZ deployments in Amazon RDS provide a synchronous replication to a standby instance in another Availability Zone.
 - [ ]   This minimizes data loss in the event of a failure, supporting a very low RPO (close to zero).
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   B. Auto Scaling for RDS adjusts compute capacity, not data replication, and does not help with RPO.
 - [ ]   C. Read replicas are for scaling read operations and involve asynchronous replication, which cannot meet a sub-second RPO.
@@ -1120,7 +1120,7 @@ B. Configure the security group for the EC2 instances to only allow traffic that
 - [ ]   Security groups act as a virtual firewall for EC2 instances.
 - [ ]   By allowing traffic only from the ALB's security group, you ensure that only the ALB can access the EC2 instances, and no other traffic is permitted.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Modifying route tables to allow direct internet traffic to private subnets is a security risk and defeats the purpose of having private subnets.
 - [ ]   C. Moving EC2 instances to public subnets exposes them to the internet, which is insecure. Elastic IP addresses are for public IP addresses.
@@ -1156,7 +1156,7 @@ D. Migrate the simulation application to Linux Amazon EC2 instances. Migrate the
 - [ ]   Amazon FSx for NetApp ONTAP supports both NFS and SMB, providing a single file system that both applications can use.
 - [ ]   This eliminates data duplication and inefficient resource usage.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Lambda is not suitable for applications that require persistent file storage and continuous processing like these.
 - [ ]   B. ECS is for containerized applications, and while it can use file storage, it doesn't directly address the NFS/SMB compatibility requirement without code changes.
@@ -1191,7 +1191,7 @@ B. Create a report in Cost Explorer and download the report.
 - [ ]   AWS Cost Explorer is a tool that enables you to visualize, understand, and manage your AWS costs and usage over time.
 - [ ]   It allows filtering and grouping costs by various dimensions, including users (if you have cost allocation tags set up), and can generate detailed reports.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. While Athena can query cost and usage data, it requires more setup and SQL knowledge compared to using Cost Explorer's built-in reporting features.
 - [ ]   C. Downloading the bill from the billing dashboard provides overall costs but does not offer the same level of granularity for reporting costs by user.
@@ -1226,7 +1226,7 @@ B. Create an Amazon API Gateway endpoint with an AWS Lambda backend that makes a
 - [ ]   API Gateway and Lambda are serverless and cost-effective for low traffic, as you only pay for usage.
 - [ ]   Lambda can process form data and use SES to send emails, providing the required dynamic functionality.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. ECS is for containerized applications and is too resource-intensive and costly for a simple contact form.
 - [ ]   C. Lightsail provides virtual private servers and is more expensive than serverless options for low traffic. Client-side scripting cannot handle server-side processing for sending emails.
@@ -1262,7 +1262,7 @@ C. Invalidate the CloudFront cache.
 - [ ]   When updates are made, CloudFront may continue to serve the old content from its cache.
 - [ ]   Invalidating the cache forces CloudFront to retrieve the latest content from the origin (S3), ensuring that users see the updates.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. An Application Load Balancer is used to distribute traffic to EC2 instances, not to refresh cached content in CloudFront.
 - [ ]   B. ElastiCache is a caching service for databases, not for updating static website content in CloudFront.
@@ -1297,7 +1297,7 @@ B. Host all three tiers on Amazon EC2 instances. Use Amazon FSx for Windows File
 - [ ]   Hosting all tiers on EC2 instances allows the use of specific SQL Server features like native backups and Data Quality Services.
 - [ ]   Amazon FSx for Windows File Server provides a fully managed Windows file server in the cloud, compatible with the application's file-sharing needs.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. FSx File Gateway is for integrating on-premises file shares with AWS, not for sharing files between tiers within AWS.
 - [ ]   C. Amazon RDS for SQL Server is a managed database service, which may not support all SQL Server features. EFS is a Linux file system and not ideal for Windows-based applications.
@@ -1332,7 +1332,7 @@ C. Create an Amazon Elastic File System (Amazon EFS) file system. Mount the EFS 
 - [ ]   Amazon EFS provides a shared file system that can be mounted by multiple EC2 instances.
 - [ ]   It supports Linux file permissions and semantics, allowing the application to access files without modification.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Amazon S3 is object storage, not a file system, and requires application changes to access files.
 - [ ]   B. CloudFront is a content delivery network (CDN) and not suitable for shared file storage.
@@ -1367,7 +1367,7 @@ B. Apply an IAM role to the Lambda function. Apply an IAM policy to the role to 
 - [ ]   IAM roles provide secure permissions to AWS resources.
 - [ ]   Granting the Lambda function an IAM role with specific permissions to the S3 bucket follows the principle of least privilege.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Bucket policies grant access to anyone who can invoke the Lambda function, which is less secure.
 - [ ]   C. Embedding access keys and secret keys in code is highly insecure and a major security risk.
@@ -1403,7 +1403,7 @@ C. A mix of On-Demand Instances and Spot Instances
 - [ ]   Spot Instances offer significant cost savings but can be interrupted, making them suitable for non-critical or fault-tolerant workloads within the Auto Scaling group.
 - [ ]   This combination optimizes cost while maintaining availability.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Dedicated Instances are the most expensive and do not offer cost savings.
 - [ ]   B. On-Demand Instances alone do not provide the cost optimization that Spot Instances offer.
@@ -1445,7 +1445,7 @@ B. Signed URLs
 - [ ]   Signed URLs provide access to individual files for a limited time.
 - [ ]   They can be used even if users cannot change hardcoded URLs, as the URLs can be pre-signed.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   C. AWS AppSync is a GraphQL service for real-time data, not designed for controlling access to S3 content.
 - [ ]   D. JWTs are for authentication and authorization within applications, not directly for controlling access to S3 URLs.
@@ -1490,7 +1490,7 @@ B. Use Amazon Managed Streaming for Apache Kafka (Amazon MSK) to stream the data
 - [ ]   AWS Glue can perform ETL (Extract, Transform, Load) operations to transform and write data to S3.
 - [ ]   Athena again is used to query the data in S3.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   C. DMS is for database migration, not for real-time streaming. EMR is for big data processing, which is more complex than needed for simple transformations.
 - [ ]   D and E. RDS query editor is for querying relational databases, not data in S3.
@@ -1524,7 +1524,7 @@ D. Use AWS Storage Gateway and configure a stored volume gateway. Run the Storag
 - [ ]   A stored volume gateway retains all data locally and asynchronously backs it up to AWS, providing local access and offsite storage.
 - [ ]   Storage Gateway automates the secure transfer of data to AWS.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A and B. Snowball and Snowball Edge are for large-scale data migration, not for ongoing backups with local access. They do not provide continuous local access.
 - [ ]   C. A cached volume gateway caches frequently accessed data locally but does not store all data locally.
@@ -1558,7 +1558,7 @@ B. Set up a gateway VPC endpoint for Amazon S3 in the VPC.
 - [ ]   A gateway VPC endpoint enables private connections to S3 from within the VPC without using the internet.
 - [ ]   This ensures that traffic remains within the AWS network.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Route 53 private hosted zones are for DNS resolution within a VPC, not for routing traffic to S3 without using the internet.
 - [ ]   C. A NAT gateway is used to allow instances in a private subnet to connect to the internet.
@@ -1593,7 +1593,7 @@ B. Store the data in an Amazon S3 bucket. Process and transform the data by usin
 - [ ]   S3 Object Lambda allows you to add your own code to S3 to process data as it is retrieved.
 - [ ]   This minimizes operational overhead by processing the PII removal in S3, rather than managing separate processing layers or data copies.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. A proxy application layer adds complexity and overhead, as it requires managing and scaling an additional application.
 - [ ]   C and D. Storing transformed data in separate S3 buckets or DynamoDB tables increases storage costs and management overhead.
@@ -1626,7 +1626,7 @@ D. $10.0.1.0/24$
 - [ ]   $10.0.1.0/24$ is a valid, non-overlapping CIDR block.
 - [ ]   /24 provides a reasonable number of IP addresses.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A and C. /32 CIDR blocks are too small, providing only 1 IP address, which is insufficient for a VPC.
 - [ ]   B. $192.168.0.0/24$ overlaps with the existing VPC's CIDR block, which is not allowed for peering.
@@ -1659,7 +1659,7 @@ B. Create an EC2 Auto Scaling group. Select the existing ALB as the load balance
 - [ ]   Target tracking scaling policies maintain a specific metric (CPU utilization) at a desired level.
 - [ ]   This ensures that the application has enough resources during surges while optimizing costs during low usage.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A. Using CloudWatch alarms and Lambda to terminate instances is complex and risky. It can lead to application instability if not implemented carefully.
 - [ ]   C. Creating an Auto Scaling group without a scaling policy does not automate scaling. It only provides basic management.
@@ -1693,7 +1693,7 @@ C. Provision a subnet in each Availability Zone. Configure the Auto Scaling grou
 - [ ]   Auto Scaling across AZs ensures EC2 instances are available even if one AZ fails.
 - [ ]   RDS Multi-AZ provides a standby DB instance in another AZ for failover.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A and B. Configuring the DB instance with "connections to each network" is vague and not the standard way to achieve high availability for RDS.
 - [ ]   D. A subnet cannot span multiple Availability Zones.
@@ -1726,7 +1726,7 @@ B. Create an Amazon S3 bucket to store the raw data. Create an Amazon FSx for Lu
 - [ ]   Amazon FSx for Lustre with persistent SSD storage is designed for high-performance computing and can provide the required sub-millisecond latencies and high throughput.
 - [ ]   Importing/exporting data between S3 and Lustre allows for efficient data management.
 
-Why are the other answers wrong?
+<hr> Why are the other answers wrong? <hr>
 
 - [ ]   A and D. FSx for NetApp ONTAP is a general-purpose file system and does not offer the same level of high performance as FSx for Lustre for this workload.
 - [ ]   C. FSx for Lustre with HDD storage does not meet the sub-millisecond latency requirement.
