--- a/251_300.md
+++ b/251_300.md
@@ -1734,7 +1734,38 @@ B. Create an Amazon S3 bucket to store the raw data. Create an Amazon FSx for Lu
 Therefore, using S3 for storage and FSx for Lustre with SSDs for processing is the appropriate solution.
 </details>
 
+<details>
+  <summary>Question 300</summary>
 
+A company needs to migrate a legacy application from an on-premises data center to the AWS Cloud because of hardware capacity constraints. The application runs 24 hours a day, 7 days a week. The application's database storage continues to grow over time. What should a solutions architect do to meet these requirements MOST cost-effectively?
+
+- [ ] A. Migrate the application layer to Amazon EC2 Spot Instances. Migrate the data storage layer to Amazon S3.
+- [ ] B. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon RDS On-Demand Instances.
+- [ ] C. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon Aurora Reserved Instances.
+- [ ] D. Migrate the application layer to Amazon EC2 On-Demand Instances. Migrate the data storage layer to Amazon RDS Reserved Instances.
+</details>
+
+<details>
+  <summary>Answer</summary>
+
+- [ ] C. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon Aurora Reserved Instances.
+
+Why these are the correct answers:
+
+C. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the data storage layer to Amazon Aurora Reserved Instances.
+
+- [ ]   EC2 Reserved Instances provide cost savings for long-running applications with predictable usage.
+- [ ]   Amazon Aurora Reserved Instances offer cost benefits for databases with consistent usage patterns.
+- [ ]   This combination is cost-effective for applications running 24/7 with growing storage needs.
+
+Why are the other answers wrong?
+
+- [ ]   A. Spot Instances are cost-effective but are not suitable for applications requiring continuous availability. Amazon S3 is object storage, not suitable for the application's database storage.
+- [ ]   B. RDS On-Demand Instances do not provide the cost benefits of Reserved Instances for long-term usage.
+- [ ]   D. EC2 On-Demand Instances are more expensive than Reserved Instances for applications with consistent, long-term needs. RDS Reserved Instances are suitable for the database layer, but On-Demand Instances for the application layer are not cost-effective.
+
+Therefore, Option C is the most cost-effective solution.
+</details>
 
 
 
