--- a/251_300.md
+++ b/251_300.md
@@ -1758,7 +1758,7 @@ C. Migrate the application layer to Amazon EC2 Reserved Instances. Migrate the d
 - [ ]   Amazon Aurora Reserved Instances offer cost benefits for databases with consistent usage patterns.
 - [ ]   This combination is cost-effective for applications running 24/7 with growing storage needs.
 
-Why are the other answers wrong?
+<hr>Why are the other answers wrong?<hr>
 
 - [ ]   A. Spot Instances are cost-effective but are not suitable for applications requiring continuous availability. Amazon S3 is object storage, not suitable for the application's database storage.
 - [ ]   B. RDS On-Demand Instances do not provide the cost benefits of Reserved Instances for long-term usage.
